--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     <button class="button" onclick="showMessage()">Sadece Dünyanın En Güzel Kızı Tıklayabilir</button>
 
     <div class="message">
+<html lang="tr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Mobil uyum için -->
@@ -83,7 +84,12 @@
         }
     </style>
 </head>
-        <img src="ayse-foto.jpg" alt="Ayşe" style="margin-top: 20px;">>
+<body>
+
+    <img src="ayse-foto.jpg" alt="Ayşe">
+
+</body>
+</html>
         <p>Ayşe seni ne kadar sevdiğimi söylememe gerek yok, çünkü muhtemelen çoktan anladın ama yine de söyleyeyim: Seni gerçekten çok seviyorum. Senle gülüp eğleniyoruz hem de en güzel anıları biriktiriyoruz. Gerçekten iyi ki varsın! Hatırlar mısın 24 Kasım 2023'te bana "inşallah senin gibi bir kocam olur" demiştin ne kadar içtendi bilemiyorum ama gerçekten benim için çok özeldir bu söz ve asla da unutmam. İnşallah benim de senin gibi nazik, sıcak kanlı, neşeli ve çok güzel bir karım olur, sırf iltifatına karşılık olsun diye değil ha içimden gelenlerdir bunlar. Senin güzelliğine sahip çok az kadın var.😉 </p>
         <img src="tebrik-gif.gif" alt="Tebrikler GIF" class="gif">
  
