--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
       </div>
         
         <p>Ayşe seni ne kadar sevdiğimi söylememe gerek yok, çünkü muhtemelen biliyorsun ama yine de söyleyeyim: Seni gerçekten çok seviyorum. Senle gülüp eğleniyoruz hem de en güzel anıları biriktiriyoruz. Gerçekten iyi ki varsın! Hatırlar mısın bana 24 Kasım 2023'te bana "inşallah senin gibi bir kocam olur" demiştin ne kadar içtendi bilemiyorum ama gerçekten benim için çok özeldir bu söz ve asla da unutmam. İnşallah benim de senin gibi nazik, sıcak kanlı, neşeli ve çok güzel bir karım olur, sırf sana karşılık olsun diye değil ha içimden gelenler bunlardır. Senin güzelliğine sahip çok az kadın var.😉 </p>
+        <p> Not: Umarım telefonunda gif ve fotoğraf tam çıkar her cihazda farklı oluyor yapamadım onu :)))) </p>
         <img src="tebrik-gif.gif" alt="Tebrikler GIF" class="gif">
  
     </div>
