--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             max-width: 300px;
             border-radius: 10px;
             margin-bottom: 15px;
-            margin-bottom: 20px;
+            margin-top: 20px;
         }
 
         .message p {
